--- a/application/templates/kokoukset/list.html
+++ b/application/templates/kokoukset/list.html
@@ -4,18 +4,12 @@
   <table>
     <tr>
       <th>Kokous</th>
-      <th>Pidetty</th>
-      <th></th>
+      <th>Done</th>
     </tr>
     {% for kokous in kokoukset %}
     <tr>
       <td>{{ kokous.name }}</td>
       <td>{{ kokous.done }}</td>
-      <td>
-	<form method="POST" action="{{ url_for('kokoukset_set_done', kokous_id=kokous.id) }}">
-	  <input type="submit" value="Change status!"/>
-	</form>
-      </td>
     </tr>
     {% endfor %}
   </table>
