--- a/application/templates/kokoukset/new.html
+++ b/application/templates/kokoukset/new.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
   
 {% block body %}
-<form method="POST" action="{{ url_for('tasks_create') }}">
+<form method="POST" action="{{ url_for('kokoukset_create') }}">
   <input type="text" name="name"/>
-  <input type="submit" value="Add a new kokous"/>
+  <input type="submit" value="Lisää uusi kokous"/>
 </form>
 {% endblock %}
