--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>KokouksenHintaApp</title>
-  </head>
-
-   <body>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <title>TodoApplication</title>
+    </head>
+    
+    <body>
       <ul>
-	<li><a href="{{ url_for('kokoukset_index') }}">Listaa kokoukset</a></li>
-	<li><a href="{{ url_for('tasks_form') }}">Lisaa kokous</a></li>
+	<li><a href="{{ url_for('tasks_index') }}">List tasks</a></li>
+	<li><a href="{{ url_for('tasks_form') }}">Add a task</a></li>
       </ul>
       
       {% block body %}
