--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
   <html>
     <head>
       <meta charset="utf-8">
-      <title>TodoApplication</title>
+      <title>Kokouksen hinta</title>
     </head>
     
     <body>
       <ul>
-	<li><a href="{{ url_for('tasks_index') }}">List tasks</a></li>
-	<li><a href="{{ url_for('tasks_form') }}">Add a task</a></li>
+	<li><a href="{{ url_for('tasks_index') }}">Kaikki kokoukset</a></li>
+	<li><a href="{{ url_for('tasks_form') }}">Lisää kokous</a></li>
       </ul>
       
       {% block body %}
