--- a/application/templates/tasks/list.html
+++ b/application/templates/tasks/list.html
@@ -3,8 +3,8 @@
 {% block body %}
   <table>
     <tr>
-      <th>Task</th>
-      <th>Done</th>
+      <th>Kokous</th>
+      <th>Pidetty</th>
       <th></th>
     </tr>
     {% for task in tasks %}
@@ -13,7 +13,7 @@
       <td>{{ task.done }}</td>
       <td>
 	<form method="POST" action="{{ url_for('tasks_set_done', task_id=task.id) }}">
-	  <input type="submit" value="Change status!"/>
+	  <input type="submit" value="Kokous pidetty"/>
 	</form>
       </td>
     </tr>
