--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -5,9 +5,17 @@
       <title>Kokouksen hinta</title>
     </head>
     
-    <body>
+    <body>    
+    {% if current_user.is_authenticated %}
+    <p>
+    Kirjautunut nimellä {{ current_user.name }}. <a href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>
+    </p>
+    {% else %}
+    <a href="{{ url_for('auth_login') }}">Kirjaudu</a>
+    {% endif %}
+      
       <ul>
-	<li><a href="{{ url_for('tasks_index') }}">Kaikki kokoukset</a></li>
+	<li><a href="{{ url_for('tasks_index') }}">Kokoukset</a></li>
 	<li><a href="{{ url_for('tasks_form') }}">Lisää kokous</a></li>
       </ul>
       
@@ -17,4 +25,4 @@
       </p>
       {% endblock %}
     </body>
-  </html>
+  </html>  
