Ohjeet päivitetty etusivulle

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,6 +2,10 @@
 
 {% block body %}
   <p>
-    Hello world!
+    Tervetuloa Kokouksen hinta verkkosivulle. Aloita kirjautumalla sivulle vasemmasta yläkulmasta.
+    Tiedätkö miten paljon turhat kokoukset maksavat aikaa ja rahaa osallistujille?
+    Voit selvittää sen helposti ja nopeasti syöttämällä kokoukseen osallistujat ja luomalla kokouksen. Verkkosivu laskee sinulle kokouksen hinnan.
+
+	
   </p>
 {% endblock %}
