Korjauksia, joita saatu palautteena kieliasussa

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
   <p>
-    Tervetuloa Kokouksen hinta verkkosivulle. Aloita kirjautumalla sivulle vasemmasta yläkulmasta.
+    Tervetuloa Kokouksen hinta verkkosivulle. Aloita kirjautumalla sivulle oikeasta yläkulmasta.
     Tiedätkö miten paljon turhat kokoukset maksavat aikaa ja rahaa osallistujille?
     Voit selvittää sen helposti ja nopeasti syöttämällä kokoukseen osallistujat ja luomalla kokouksen. Verkkosivu laskee sinulle kokouksen hinnan.
   </p>
